<resources>
    <string name="app_name">Neurolab</string>

    <!-- Page titles -->
    <string name="title_search_patient">Search Patient</string>
    <string name="title_create_patient">Create Patient</string>
    <string name="title_delete_patient">Delete Patient</string>
    <string name="title_settings">Settings</string>
    <string name="title_recover_password">Recover Password</string>

    <!-- Game titles -->
    <string name="title_motor_skills">Motor Skills</string>
    <string name="title_reaction_time">Reaction Time</string>
    <string name="title_visual_short_term_memory">Short Term Visual Memory</string>
    <string name="title_visual_attention">Visual Attention</string>

    <!-- Create patient fragment strings -->
    <string name="patient_id_title">Patient ID</string>
    <string name="enter_unique_id">Enter a unique ID</string>
    <string name="attempts_per_game_title">Attempts Per Game</string>
    <string name="create_button">Create</string>
    <string name="identifier_disclaimer">Please make sure the patient ID does not contain any
    personal information, including but not limited to the patients name, age, address and date of birth</string>
    <string name="alpha_numeric_regex">^[a-zA-Z0-9]+$</string>
    <string name="error_patient_id_blank">PatientID cannot be blank</string>
    <string name="error_patient_id_special_characters">PatientID contains 1 or more illegal characters</string>
    <string name="error_patient_id_length">Patient ID is too long, must be 10 characters maximum</string>
    <string name="error_patient_id_in_use">PatientID already in use</string>
    <string name="open">Open</string>

    <!-- Search Patient fragment strings -->
    <string name="search_patient_hint">Enter Patient ID</string>
    <string name="search_patient_error_toast_text">Patient doesn\'t exist in the database, updating the patient list</string>

    <!-- Delete Patient Fragment strings -->
    <string name="delete_patient_select_all">Select All</string>
    <string name="delete_patient_delete_text">Delete Patients</string>
    <string name="delete_patient_confirmation_dialog">You are about to delete %1$s patients and all data associated with them.\nThis action cannot be undone.\nDo you wish to continue?</string>
    <string name="delete_patient_confirmation_dialog_1_selected">You are about to delete 1 patient and all data associated with them.\nThis action cannot be undone.\nDo you wish to continue?</string>
    <string name="delete_patient_no_patients_selected">No patients selected</string>

    <!--Generic Game Related strings-->
    <string name="start_game">Start Game</string>
    <string name="next_round">Next Round</string>
    <string name="attempts_none">No attempts remaining</string>
    <string name="textview_attempts_plural">%1$s attempts remaining</string>
    <string name="textview_attempts_singular">%1$s attempt remaining</string>
    <string name="play_again">Play Again</string>
    <string name="exit">Exit Game</string>
    <string name="game_round">Round %1$s</string>

    <!--Reaction Game Strings-->
    <string name="reactionGame_tap">TAP</string>
    <string name="reactionGame_information">Tap the yellow circle as soon as you see it.</string>
    <string name="reactionGame_tap_to_early">Try not to tap the screen until the yellow circle appears</string>
    <string name="reactionGame_exception_timer_not_started">Attempted to measure elapsed time but start time has not been set.</string>

    <!--Visual Attention Game-->
    <string name="visualAttention_display_score">Score: %1$s</string>
    <string name="visualAttention_tap_text">Tap Every</string>
    <string name="visualAttention_submit">Submit</string>

    <!--Visual Memory Game Strings-->
    <string name="visual_memory_textview_remember">Remember this pattern</string>
    <string name="visual_memory_textview_start_pattern">Enter in the pattern</string>
    <string name="visual_memory_textview_game_complete">Game Complete</string>
    <string name="visual_memory_textview_round_complete">You are correct!</string>
    <string name="visual_memory_textview_try_plural">%1$s tries remaining</string>
    <string name="visual_memory_textview_try_singular">%1$s try remaining</string>
    <string name="visual_memory_textview_score">Score: %1$s squares</string>
    <string name="visual_memory_tag_error_check">Incorrect Guess</string>
    <string name="visual_memory_tag_not_correct_button">Not Correct</string>
    <string name="visual_memory_tag_pattern_check">Part of Pattern</string>

    <!-- View report page strings -->
    <string name="view_report_title">View Report</string>
    <string name="view_report_game_header">Game</string>
    <string name="view_report_month">Month</string>
    <string name="view_report_week">Week</string>
    <string name="view_report_average">Average: %1$s</string>
    <string name="view_report_best">Best: %1$s</string>
<!--    <string name="view_report_average_blank">Average: -</string>-->
<!--    <string name="view_report_best_blank">Best: -</string>-->
    <string name="view_report_all">All</string>

    <!--View Patient Details Strings-->
    <string name="view_patient_details_delete_patient">DELETE PATIENT</string>
    <string name="view_patient_details_view_report">VIEW REPORT</string>
    <string name="view_patient_details_manage_patient">MANAGE PATIENT</string>
    <string name="view_patient_details_run_games">RUN GAMES</string>
    <string name="view_patient_details_patient_identifier">Patient: %1$s</string>
    <string name="view_patient_details_last_date_played">Games last run: %1$s</string>
    <string name="view_patient_details_patient_id_not_found">Patient not found</string>
    <string name="view_patient_details_patient_date_not_found">Please exit the page and try again</string>
    <string name="view_patient_details_action_bar_title">Patient Details</string>
    <string name="view_patient_details_delete_patient_dialog">You are about to delete this patient and all data associated with them.\n\nThis action cannot be undone.\n\nDo you wish to continue?</string>

    <!--    Login, Create Password & Security Questions Screens-->
    <string name="login_sign_in">Sign In</string>
    <string name="login_enter_password">Enter Password</string>
    <string name="login_reset_password">Reset Password</string>
    <string name="login_erase_database_warning">There are no security questions set for this account.\n\nIf you wish to reset your password, you must erase all data in the database. Information deleted this way will not be recovered.\n\n Are you sure you want to proceed?</string>
    <string name="create_password">Create Password</string>
    <string name="create_a_new_password">Create A New Password</string>
    <string name="retype_password">Re-Enter Password</string>
    <string name="create_password_criteria">Password must be at least 6 characters long and contain a letter, number and symbol</string>
    <string name="create_password_not_equal">Passwords do not match</string>
    <string name="enter_password">Enter Password</string>
    <string name="security_erase_database_warning">If you wish to reset your password and security questions, you must erase all data in the database. Information deleted this way will not be recovered.\n\n Are you sure you want to proceed?</string>
    <string name="security_code_blank">Security code is blank, please try again</string>
    <string name="security_incorrect_security_code">Incorrect security code, please try again</string>
    <string name="security_correct_security_code">Security code correct, wiping database information and login information</string>
    <string name="security_reset_information">Please enter in the security code to wipe the database information. This code can be found inside the user manual, in the "Quick Guide - Resetting Your Password" page.\n\nOnce you confirm the security code, the reset will happen immediately.\n\n</string>
    <string name="security_tag_security_code">Security Code</string>
    <string name="security_question_answers_incorrect">The answers to the security questions are incorrect, please try again</string>


    <!--    Login Security Questions Screen-->
    <string name="login_security_textview_reset">Reset Password</string>
    <string name="login_security_textview_question_one">Security Question One</string>
    <string name="login_security_textview_question_two">Security Question Two</string>
    <string name="login_security_button_forgot">Forgot Answers</string>
    

    <!-- Edit Patient Details Strings -->
    <string name="edit_patient_details_confirm">Confirm</string>
    <string name="edit_patient_details_exit">Exit</string>
    <string name="edit_patient_details_patient_updated">Patient details updated</string>
    <string name="edit_patient_details_title">Manage Patient</string>


    <!-- Settings Strings -->
    <string name="settings_title">Settings</string>
    <string name="settings_password_reset_title">Reset Password</string>
    <string name="settings_password_current">Confirm Current Password</string>
    <string name="settings_password_new">New Password</string>
    <string name="settings_password_repeat">Confirm New Password</string>
    <string name="settings_password_error">Current password incorrect, please try again</string>
    <string name="settings_password_reset_successful">Password reset successfully</string>
    <string name="settings_textview_security_title">Security Questions</string>
    <string name="settings_textview_security_question_one">Security Question One</string>
    <string name="settings_textview_security_question_two">Security Question Two</string>
    <string name="settings_editText_security_question_one"> Question One</string>
    <string name="settings_editText_hint_one">Ex: Your mothers maiden name</string>
    <string name="settings_editText_security_answer_one">Answer One</string>
    <string name="settings_editText_security_question_two">Question Two</string>
    <string name="settings_editText_hint_two">Ex: Your first pets name</string>
    <string name="settings_editText_security_answer_two">Answer Two</string>
    <string name="settings_button_submit">Submit</string>
    <string name="settings_toast_security_reset_successful">Security Questions set successfully</string>
    <string name="settings_toast__error_password">Please enter your current password to make any changes</string>

    <!-- Motor Skills Game -->
    <string name="motor_skills_game_score_one">Score: %1$s Round</string>
    <string name="motor_skills_game_score_multiple">Score: %1$s Rounds</string>


    <!--Generic Strings-->
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_body">"In regards to this app\nNeurolab by Soteria is designed as an assistant tool only. It should not be relied upon for treatment, diagnosis\n or professional medical advice. If you have any queries about its use,\nplease consult your local physician or health care provider.
        \nIn regards to personal data\nSoteria do not store any personal data you enter on external hardware, \ninformation gathered by this app will stay on the device installed. Your information, \nand control over it, is accessible only to you or your healthcare provider.
        \nYour Responsibilities\nYou must not store any information that could be considered confidential information \non this application for the purposes of identifying a patient registered on this device. Information includes but is not limited to a patient's name, age, address, phone number or birthday.
        \nBy continuing to the app, you confirm that you have read, understood and accept the above statement."</string>
    <string name="shared_preferences_filename">neurolabPrefs</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    
    <!-- Select Game Screen -->
    <string name="select_game">Select Game</string>

    <!-- Tutorial Activity -->
    <string name="game_instructions">Game Instructions</string>
    <string name="video_demonstration">Video Demonstration</string>

</resources>
